--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - "5000:5000"
     environment:
       - FLASK_APP=run.py
-      - FLASK_ENV=development
-      - FLASK_DEBUG=1
+      - FLASK_ENV=production
+      - FLASK_DEBUG=0
       - DATABASE_URL=postgresql://postgres:postgres@postgre-container:5432/User_Biometrics
       - UPLOAD_FOLDER=uploads
       - MAX_CONTENT_LENGTH=16777216
