--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
-# Database Configuration
-# Ganti dengan URI database PostgreSQL Anda
-DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+# Database config
+DATABASE_URL=postgresql://postgres:postgres@db:5432/User_Biometrics
 
 # Flask Settings
 # Ganti dengan random string yang aman untuk production
 SECRET_KEY=ganti-dengan-secret-key-yang-aman
 FLASK_APP=run.py
 FLASK_ENV=development
+
+# Face Recognition config (Optional)
+# FACE_MODEL=VGG-Face
+# FACE_THRESHOLD=0.40
 
 # Biometric Settings
 FACE_MODEL=ArcFace
